[package]
name = "chainsmoker"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-gossip = { version = "3.0.3", features = ["agave-unstable-api"]}
solana-net-utils = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
solana-streamer = "3.0.3"
solana-ledger = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-entry = "3.0.0"
bincode = "1.3.3"
solana-logger = "3.0.0"
log = "0.4"


tokio = "1.47.1"
async-trait = "0.1.89"